turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:3: error: not found: value i
		while(getCouleurSol!=colors(i)){
                                            ^LangtonsAnt:4: error: not found: value i
			if(getCouleurSol()==colors(i)){
                                                   ^LangtonsAnt:5: error: not found: value i
				setCouleurBrosse(colors(i+1));
                                                        ^LangtonsAnt:9: error: not found: value j
		if(rule(j)=="R"){
                        ^